txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -245,7 +245,7 @@ In this case $D$ had a physical meaning: Einstein proved\par
 	\begin{equation*}
 		D=\frac{1}{\sqrt{6\pi r\eta}}\frac{RT}{N}
 	\end{equation*}
-\end{minipage}\begin{minipage}{0.6}
+\end{minipage}\begin{minipage}{0.6\linewidth}
 content...
 \end{minipage}
 \clearpage
