--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -241,11 +241,11 @@ This was the equation of heat diffusion that was already well known at the time.
 \end{equation*}
 In this case $D$ had a physical meaning: Einstein proved\par
 \noindent
-\begin{minipage}{0.4\linewidth}
+\begin{minipage}{0.5\textwidth}
 	\begin{equation*}
 		D=\frac{1}{\sqrt{6\pi r\eta}}\frac{RT}{N}
 	\end{equation*}
-\end{minipage}\begin{minipage}{0.6\linewidth}
+\end{minipage}\begin{minipage}{0.5\textwidth}
 content...
 \end{minipage}
 \clearpage
