txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -246,7 +246,11 @@ In this case $D$ had a physical meaning: Einstein proved\par
 		D=\frac{1}{\sqrt{6\pi r\eta}}\frac{RT}{N}
 	\end{equation*}
 \end{minipage}\begin{minipage}{0.5\textwidth}
-content...
+\begin{itemize}
+	\item $\eta$: dynamic viscosity
+	\item $r$: dimension of particles
+	\item $R$: gas constant (8.3 $\frac{\mathrm{R}}{\mathrm{mol~K}}$)
+\end{itemize}
 \end{minipage}
 \clearpage
 \listoffigures  
