--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -249,7 +249,9 @@ In this case $D$ had a physical meaning: Einstein proved\par
 \begin{itemize}
 	\item $\eta$: dynamic viscosity
 	\item $r$: dimension of particles
-	\item $R$: gas constant (8.3 $\frac{\mathrm{R}}{\mathrm{mol~K}}$)
+	\item $R$: gas constant (8.3 $\frac{\mathrm{J}}{\mathrm{mol~K}}$)
+	\item $T$: absolute temperature
+	\item $N$: Avogadro's number
 \end{itemize}
 \end{minipage}
 \clearpage
