txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -254,6 +254,10 @@ In this case $D$ had a physical meaning: Einstein proved\par
 	\item $N$: Avogadro's number
 \end{itemize}
 \end{minipage}
+He could, moreover, calculate the average displacement of a particle
+\begin{equation*}
+	\lambda_{x}=\sqrt{\overline{x}^{2}}=\sqrt{2Dt}
+\end{equation*}
 \clearpage
 \listoffigures  
 \end{document} 
