txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -256,8 +256,9 @@ In this case $D$ had a physical meaning: Einstein proved\par
 \end{minipage}
 He could, moreover, calculate the average displacement of a particle
 \begin{equation*}
-	\lambda_{x}=\sqrt{\overline{x}^{2}}=\sqrt{2Dt}
+	\lambda_{x}=\sqrt{\overline{x}^{2}}=\sqrt{2Dt}.
 \end{equation*}
+This means that the displacement (space) is proportional to the square root of time... But what is this story of space and time being related non linearly? This sounded pretty wild for that time.
 \clearpage
 \listoffigures  
 \end{document} 
