txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -259,6 +259,13 @@ He could, moreover, calculate the average displacement of a particle
 	\lambda_{x}=\sqrt{\overline{x}^{2}}=\sqrt{2Dt}.
 \end{equation*}
 This means that the displacement (space) is proportional to the square root of time... But what is this story of space and time being related non linearly? This sounded pretty wild for that time.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/screenshot007}
+	\caption{Idk I think I would have probably killed myself.}
+	\label{fig:screenshot007}
+\end{figure}
+
 \clearpage
 \listoffigures  
 \end{document} 
