--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -189,7 +189,8 @@ Let's have a fucking party!
 		\end{equation*}
 	\end{remark}
 \end{enumerate}
-\section{Definition of Brownian motion}
+\section{Brownian motion}
+\subsection{Historical context}
 Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-23}$ (the Avogadro number) molecules with a diameter of $10^{-10}$ m of diameter.
 \begin{figure}[h]
 	\centering
@@ -265,6 +266,7 @@ This means that the displacement (space) is proportional to the square root of t
 	\caption{Idk I think I would have probably killed myself.}
 	\label{fig:screenshot007}
 \end{figure}
+\subsection{Random walk model}
 
 \clearpage
 \listoffigures  
