txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -267,7 +267,14 @@ This means that the displacement (space) is proportional to the square root of t
 	\label{fig:screenshot007}
 \end{figure}
 \subsection{Random walk model}
-
+We can think that:
+\begin{itemize}
+	\item each particle starts at $x=0$;
+	\item the particle changes position at discrete times
+	\begin{equation*}
+		k\Delta t \qquad k=1,2,\ldots\qquad\Delta t>0.
+	\end{equation*}
+\end{itemize}
 \clearpage
 \listoffigures  
 \end{document} 
