txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -272,8 +272,9 @@ We can think that:
 	\item each particle starts at $x=0$;
 	\item the particle changes position at discrete times
 	\begin{equation*}
-		k\Delta t \qquad k=1,2,\ldots\qquad\Delta t>0.
+		k\Delta t \qquad k=1,2,\ldots\qquad\Delta t>0;
 	\end{equation*}
+	\item the particles move $\Delta x$ units to the right (or to the left) with probability $p=\unmezz$
 \end{itemize}
 \clearpage
 \listoffigures  
