txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -274,8 +274,15 @@ We can think that:
 	\begin{equation*}
 		k\Delta t \qquad k=1,2,\ldots\qquad\Delta t>0;
 	\end{equation*}
-	\item the particles move $\Delta x$ units to the right (or to the left) with probability $p=\unmezz$
+	\item the particles move $\Delta x$ units to the right (or to the left) with probability $p=\unmezz$;
+	\item $\Delta x$ does not depend on any past position nor on the current position. 
 \end{itemize}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/screenshot008}
+	\caption{I do not know how to do curly brackets}
+	\label{fig:screenshot008}
+\end{figure}
 \clearpage
 \listoffigures  
 \end{document} 
