txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -277,12 +277,13 @@ We can think that:
 	\item the particles move $\Delta x$ units to the right (or to the left) with probability $p=\unmezz$;
 	\item $\Delta x$ does not depend on any past position nor on the current position. 
 \end{itemize}
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5\linewidth]{img/screenshot008}
 	\caption{I do not know how to do curly brackets}
 	\label{fig:screenshot008}
 \end{figure}
+When 
 \clearpage
 \listoffigures  
 \end{document} 
