txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -283,7 +283,7 @@ We can think that:
 	\caption{I do not know how to do curly brackets}
 	\label{fig:screenshot008}
 \end{figure}
-When 
+When $\Delta x$ and $\Delta t$ go to 0 in an appropriate way, we don't see ``jumps'' anymore but a continuous process.
 \clearpage
 \listoffigures  
 \end{document} 
