txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -283,7 +283,14 @@ We can think that:
 	\caption{I do not know how to do curly brackets}
 	\label{fig:screenshot008}
 \end{figure}
-When $\Delta x$ and $\Delta t$ go to 0 in an appropriate way, we don't see ``jumps'' anymore but a continuous process.
+When $\Delta x$ and $\Delta t$ go to 0 in an appropriate way, we don't see ``jumps'' anymore but a continuous process:
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/screenshot009}
+	\caption{I miss tikzes but they take so much time.}
+	\label{fig:screenshot009}
+\end{figure}
+
 \clearpage
 \listoffigures  
 \end{document} 
