txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -306,7 +306,7 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.5\linewidth]{img/screenshot010}
-		\caption[h]{Divide the random walk...}
+		\caption{Divide the random walk...}
 		\label{fig:screenshot010}
 	\end{figure}
 	But these quantities involve different $\varepsilon$, so they are 
