--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -303,7 +303,7 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 		X_{T}&=(X_{T}-X_{t})+(X_{t}-X_{0})\\
 		&=\sum_{k=n+1}^{N}(2\varepsilon_{k}-1)\Delta x+\sum_{k=1}^{n}(2\varepsilon_{k}-1)\Delta x.
 	\end{align*}
-	\begin{figure}[h]
+	\begin{figure}
 		\centering
 		\includegraphics[width=0.5\linewidth]{img/screenshot010}
 		\caption{Divide the random walk...}
