--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -306,7 +306,10 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 		\begin{center}
 			\includegraphics[width=0.5\linewidth]{img/screenshot010}
 		\end{center}
-	But these quantities involve different $\varepsilon$, so they are 
+	But these quantities involve different $\varepsilon$, so they are independent:
+	\begin{equation*}
+		X_{T}-X_{t}\independent X_{t}-X_{0}\qquad\text{(independent increments.)}
+	\end{equation*}
 \end{remark}
 \clearpage
 \listoffigures  
