txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -310,6 +310,10 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 	\begin{equation*}
 		X_{T}-X_{t}\independent X_{t}-X_{0}\qquad\text{(independent increments.)}
 	\end{equation*}
+	But we know that 
+	\begin{equation*}
+		\ev\varepsilon_{i}=\unmezz\qquad\mathrm{and}\qquad\var\varepsilon_{i}=\frac{1}{4}
+	\end{equation*}
 \end{remark}
 \clearpage
 \listoffigures  
