txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -314,6 +314,11 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 	\begin{equation*}
 		\ev\varepsilon_{i}=\unmezz\qquad\mathrm{and}\qquad\var\varepsilon_{i}=\frac{1}{4}
 	\end{equation*}
+	so
+	\begin{align*}
+		\var X_{T}&=\var\left[\sum_{N}_{k}(2\varepsilon_{k}-1)\Delta x\right]\\
+		&\underset{i.i.d.}{=}
+	\end{align*}
 \end{remark}
 \clearpage
 \listoffigures  
