txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -316,8 +316,8 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 	\end{equation*}
 	so
 	\begin{align*}
-		\var X_{T}&=\var\left[\sum_{N}_{k}(2\varepsilon_{k}-1)\Delta x\right]\\
-		&\underset{i.i.d.}{=}
+		\var X_{T}&=\var\left[\sum^{}{N}_{k}(2\varepsilon_{k}-1)\Delta x\right]\\
+		&\overrset{i.i.d.}{=}
 	\end{align*}
 \end{remark}
 \clearpage
