txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -317,7 +317,7 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 	so
 	\begin{align*}
 		\var X_{T}&=\var\left[\sum^{}{N}_{k}(2\varepsilon_{k}-1)\Delta x\right]\\
-		&\overrset{i.i.d.}{=}
+		&\overset{i.i.d.}{=}
 	\end{align*}
 \end{remark}
 \clearpage
