--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -317,7 +317,9 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 	so
 	\begin{align*}
 		\var X_{T}&=\var\left[\sum^{}{N}_{k}(2\varepsilon_{k}-1)\Delta x\right]\\
-		&\overset{i.i.d.}{=}
+		&\overset{i.i.d.}{=}\sum^{N}_{k}\left(\Delta x\right)^{2}\var(2\varepsilon_{k}-1)\\
+		&=\sum_{k}^{N}(\Delta x)^{2}4\ubracketthin{\var \varepsilon_{k}}_{\frac{1}{4}}\\
+		&=N(\Delta x)^{2}
 	\end{align*}
 \end{remark}
 \clearpage
