--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -319,8 +319,12 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 		\var X_{T}&=\var\left[\sum^{}{N}_{k}(2\varepsilon_{k}-1)\Delta x\right]\\
 		&\overset{i.i.d.}{=}\sum^{N}_{k}\left(\Delta x\right)^{2}\var(2\varepsilon_{k}-1)\\
 		&=\sum_{k}^{N}(\Delta x)^{2}\cancel{4}\ubracketthin{\cancel{\var \varepsilon_{k}}}_{\frac{1}{4}}\\
-		&=N(\Delta x)^{2}
+		&=N(\Delta x)^{2}.
 	\end{align*}
+	But $N=\frac{T}{\Delta t}$ so 
+	\begin{equation*}
+		N(\Delta x)^{2}=\frac{(\Delta x)^{2}}{\Delta t}T=\sigma^{2}T
+	\end{equation*}
 \end{remark}
 \clearpage
 \listoffigures  
