txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -323,9 +323,10 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 	\end{align*}
 	But $N=\frac{T}{\Delta t}$ so 
 	\begin{equation*}
-		N(\Delta x)^{2}=\frac{(\Delta x)^{2}}{\Delta t}T=\sigma^{2}T
+		N(\Delta x)^{2}=\frac{(\Delta x)^{2}}{\Delta t}T=\sigma^{2}T.
 	\end{equation*}
 \end{remark}
+So this should be the variance of our random walk. If we take the limit for $x$ and $t$ and do nost take into account that space and time decrease in different ways we get a process
 \clearpage
 \listoffigures  
 \end{document} 
