--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -326,7 +326,13 @@ So we get a continuous process ${\{X_{t}\}}_{t\geq0}$ that is the random positio
 		N(\Delta x)^{2}=\frac{(\Delta x)^{2}}{\Delta t}T=\sigma^{2}T.
 	\end{equation*}
 \end{remark}
-So this should be the variance of our random walk. If we take the limit for $x$ and $t$ and do nost take into account that space and time decrease in different ways we get a process that has mean 0 and variance 0... but that is a process that is 0 almost surely! So we get the idea that time and space must decrease at different speeds.
+So this should be the variance of our random walk. If we take the limit for $x$ and $t$ and do nost take into account that space and time decrease in different ways we get a process that has mean 0 and variance 0... but that is a process that is 0 almost surely! So we get the idea that time and space must decrease at different speeds. We also said that the increments must be stationary, but that has its implications.
+\begin{remark}
+	We know that $\var 2S_{N}=N$, but
+	\begin{align*}
+		X_{T}&=(2S_{N}-\ubracketthin{N}_{\mathclap{\ev 2 S_{N}}})\Delta x
+	\end{align*}
+\end{remark}
 \clearpage
 \listoffigures  
 \end{document} 
