--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -330,7 +330,8 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 \begin{remark}
 	We know that $\var 2S_{N}=N$, but
 	\begin{align*}
-		X_{T}&=(2S_{N}-\ubracketthin{N}_{\mathclap{\ev 2 S_{N}}})\Delta x
+		X_{T}&=(2S_{N}-\ubracketthin{N}_{\mathclap{\ev 2 S_{N}}})\Delta x\\
+		&=\frac{2 S_{N}-\ev 2 S_{N}}{\mathcolor{Green4}{\sqrt{N}}}\mathcolor{Green4}{\sqrt{N}}\Delta x
 	\end{align*}
 \end{remark}
 \clearpage
