txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -332,7 +332,7 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 	\begin{align*}
 		X_{T}&=(2S_{N}-\ubracketthin{N}_{\mathclap{\ev 2 S_{N}}})\Delta x\\
 		&=\frac{2 S_{N}-\ev 2 S_{N}}{\mathcolor{Green4}{\sqrt{N}}}\mathcolor{Green4}{\sqrt{N}}\Delta x\\
-		&=\frac{2S_{N}-\ev 2 S_{N}}{\sqrt{\var(2S_{N})}}\ubracketthin{\sqrt{N}}_{\sqrt{\frac{T}{\delta t}}}\ubracketthin{\Delta x}_{\mathclap{\sigma\sqrt{\Delta t}}}
+		&=\frac{2S_{N}-\ev 2 S_{N}}{\sqrt{\var(2S_{N})}}\ubracketthin{\sqrt{N}}_{\sqrt{\frac{T}{\delta t}}}\ubracketthin{\Delta x}_{{\sigma\sqrt{\Delta t}}}
 	\end{align*}
 \end{remark}
 \clearpage
