--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -333,8 +333,12 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 		X_{T}&=(2S_{N}-\ubracketthin{N}_{\mathclap{\ev 2 S_{N}}})\Delta x\\
 		&=\frac{2 S_{N}-\ev 2 S_{N}}{\mathcolor{Green4}{\sqrt{N}}}\mathcolor{Green4}{\sqrt{N}}\Delta x\\
 		&=\frac{2S_{N}-\ev 2 S_{N}}{\sqrt{\var(2S_{N})}}\ubracketthin{\sqrt{N}}_{\sqrt{\frac{T}{\delta t}}}\ubracketthin{\Delta x}_{{\sigma\sqrt{\Delta t}}}\\
-		&=\frac{2S_{N}-\ev 2 S_{N}}{\ubracketthin{\sqrt{\var(2S_{N})}}_{\claptext{This gets to $Z\distnorm{0,1}$ as $N\to\infty$}}}\sigma\sqrt{T}
+		&=\frac{2S_{N}-\ev 2 S_{N}}{\ubracketthin{\sqrt{\var(2S_{N})}}_{\claptext{This gets to $Z\distnorm{0,1}$ as $N\to\infty$}}}\sigma\sqrt{T}.
 	\end{align*}
+	So we get that this quantity gets to $Z\sigma\sqrt{t}$ and it is true for each $t$:
+	\begin{equation*}
+		X_{t}\distnorm{0,t\sigma^{2}}.
+	\end{equation*}
 \end{remark}
 \clearpage
 \listoffigures  
