txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -340,6 +340,13 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 		X_{t}\distnorm{0,t\sigma^{2}}.
 	\end{equation*}
 \end{remark}
+\begin{definition}
+	\emph{Definition of Brownian Motion} (1923, by Norbert Wiener).\\
+	A stochastic process $B={\{B_{t}\}}_{t\geq 0}$ defined on a probability space $(\Omega,\F,\pr)$ and taking values in $\R$ is called \emph{standard Brownian motion} (or \emph{standard Wiener process}) if:
+	\begin{enumerate}
+		\item the function $t\mapsto B_{t}$ is \ul{continuous} from $\R_{+}$ to $\R$ and $B_{0}=0$ (both almost surely).
+	\end{enumerate}
+\end{definition}
 \clearpage
 \listoffigures  
 \end{document} 
