txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -520,7 +520,7 @@
 									\newcommand{\intT}{\int_{0}^{T}}
 									\newcommand{\nN}{n \in \mathbb{N}}
 									\newcommand{\mmN}{\mathcal{N}}
-									\newcommand{\BM}{(B_t)_{t\geq 0}}
+									\newcommand{\bm}{brownian motion}
 									\newcommand{\PX}{(X_t)_{t\geq 0}}
 									\newcommand{\var}{\mathbb{V}\!\mathrm{ar}\,}
 									\newcommand{\cov}{\mathbb{C}\mathrm{ov}\,}
