txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -357,7 +357,7 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 	\end{enumerate}
 \end{definition}
 \begin{defintion}
-	\emph{General \bm{}}
+	\emph{General brownian motion}
 \end{definition}
 \clearpage
 \listoffigures  
