txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -356,6 +356,12 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 		\item $B_{t}\distnorm{0,t}$ for $\every t\geq 0$.
 	\end{enumerate}
 \end{definition}
+\begin{definition}
+	\emph{General Brownian motion} (Brownian motion with drift).\\
+	\begin{equation*}
+		X_{t}=\ubracketthin{\mu}_{\claptext{drift}} t+\ubracketthin{\sigma}_{D=\frac{\sigma^{2}}{2}} B_{t}
+	\end{equation*}
+\end{definition}
 \clearpage
 \listoffigures  
 \end{document} 
