--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -359,7 +359,11 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 \begin{definition}
 	\emph{General Brownian motion} (Brownian motion with drift).\\
 	\begin{equation*}
-		X_{t}=\ubracketthin{\mu}_{\claptext{drift}} t+\ubracketthin{\sigma}_{D=\frac{\sigma^{2}}{2}} B_{t}
+		X_{t}=\ubracketthin{\mu}_{\claptext{drift}} t+\ubracketthin{\sigma}_{D=\frac{\sigma^{2}}{2}} B_{t}.
+	\end{equation*}
+	This process verifies properties 1, 2, 3 and
+	\begin{equation*}
+		X_{t}\distnorm{\mu t,\sigma^{2}t}.
 	\end{equation*}
 \end{definition}
 \clearpage
