txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -548,6 +548,7 @@
 		\newcommand{\sumkon}{\sum_{k=0}^{n}}
 		\newcommand{\sumjon}{\sum_{j=0}^{n}}
 		\newcommand{\sumiok}{\sum_{i=0}^{k}}
+		\newcommand{\bwm}{Brownian motion}
 		\newcommand{\distexp}[1]{\sim\mathsf{Exp}\left(#1\right)}
 		\newcommand{\distnorm}[1]{\sim\mathsf{N}\left(#1\right)}
 		\newcommand{\distbernoulli}[1]{\sim\mathsf{Be}\left(#1\right)}
