txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -366,6 +366,7 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 		X_{t}\distnorm{\mu t,\sigma^{2}t}.
 	\end{equation*}
 \end{definition}
+We can now proceed to define the $d$-dimensional \bwm{}"
 \clearpage
 \listoffigures  
 \end{document} 
