txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -366,7 +366,13 @@ So this should be the variance of our random walk. If we take the limit for $x$ 
 		X_{t}\distnorm{\mu t,\sigma^{2}t}.
 	\end{equation*}
 \end{definition}
-We can now proceed to define the $d$-dimensional \bwm{}"
+We can now proceed to define the $d$-dimensional \bwm{}:
+\begin{definition}
+	A $d$-dimensional \bwm, $B={\{B_{t}\}}_{t\geq 0}$ is a stochastic process indexed by $[0,\infty)$ taking values on $\R^{d}$ such that:
+	\begin{enumerate}
+		\item $B_{0}(\omega)=0$ \as{} $\every\omega\in\Omega$
+	\end{enumerate}
+\end{definition}
 \clearpage
 \listoffigures  
 \end{document} 
