--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -373,7 +373,11 @@ We can now proceed to define the $d$-dimensional \bwm{}:
 		\item $B_{0}(\omega)=0$ \as{} $\every\omega\in\Omega$;
 		\item $B_{t_{n}}-B_{t_{n-1}},\ldots,B_{t_{1}}-B_{t_{0}}$ are independent fo $\every n>1,\;0\leq t_{1},t_{2}<\ldots<t_{n}<\infty$ (\emph{independent increments});
 		\item $B_{t}-B_{s}\sim B_{t+h}-B_{s+h}$ for $\every h>0$, $\every 0\leq s<t<\infty$ (\emph{stationary increments});
-		\item $B_{t}-B_{s}\distnorm{0,t-s}^{\otimes d}$
+		\item $B_{t}-B_{s}\distnorm{0,t-s}^{\otimes d}$ with 
+		\begin{equation*}
+			\mathsf{N}(0,t)\dx =\frac{\dx}{\sqrt{2\pi t}}\exp\left\{-\frac{x^{2}}{2t}\right\}
+		\end{equation*} (\emph{Gaussian increments});
+		\item $t\mapsto B_{t}(\omega)$ is continuous for all $\omega$ (\emph{continuity of sample paths}).
 	\end{enumerate}
 \end{definition}
 \clearpage
