txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -380,6 +380,15 @@ We can now proceed to define the $d$-dimensional \bwm{}:
 		\item $t\mapsto B_{t}(\omega)$ is continuous for all $\omega$ (\emph{continuity of sample paths}).
 	\end{enumerate}
 \end{definition}
+Remember that 
+\begin{equation*}
+	1,2,3,5\implies 4\qquad\text{and}\qquad1,2,3,4\implies 5
+\end{equation*}
+for almost all $\omega$. A standard \bwm{} on $\R^{d}$ is obtained by setting
+\begin{equation*}
+	B=(B^{1},B^{2},\ldots,B^{d})
+\end{equation*}
+where $B^{2},B_{2},\ldots$ are independent \bwm{} on $\R$ called \ul{coordinate process}.
 \clearpage
 \listoffigures  
 \end{document} 
