txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -392,9 +392,12 @@ where $B^{1},B^{2},\ldots$ are independent \bwm{} on $\R$ called \ul{coordinate 
 \begin{definition}
 	The continuous process $W$ is called \emph{Wiener process} with respect to $\mathscr{A}$ if it is adapted to $\mathscr{A}$ (check that adaptness is included in the above definitions!) and 
 	\begin{equation*}
-		\ev_{s}f[W_{s+t}-W_{s}]=\int_{\R}\dx\left[\frac{e^{-\frac{x^{2}}{4t}}}{\sqrt{2\pi t}}f(x)\right]\qquad\text{for $f$ positive Borel function and }\every s,t\in\R_{+}
+		\ev_{s}f[W_{s+t}-W_{s}]=\int_{\R}\dx\left[\frac{e^{-\frac{x^{2}}{4t}}}{\sqrt{2\pi t}}f(x)\right]\qquad\text{for $f$ positive Borel function and }\every s,t\in\R_{+}.
 	\end{equation*}
 \end{definition}
+\begin{exercise}
+	Prove that the second definition of \bwm{} implies the first for $d=1$
+\end{exercise}
 \clearpage
 \listoffigures  
 \end{document} 
