txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -351,7 +351,7 @@
 		\path[
 		draw=white,
 		sharp corners,
-		pattern=custom north east lines,
+		pattern=stripes,
 		hatchspread=12pt,
 		hatchthickness=4pt,
 		hatchcolor=SkyBlue1!10,
