txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -349,7 +349,7 @@
 	breakable=false,
 	interior titled code={
 		\path[
-		draw=white,
+		draw=red,
 		sharp corners,
 		pattern=north east lines,
 		hatchspread=120pt,
