--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -349,9 +349,9 @@
 	breakable=false,
 	interior titled code={
 		\path[
-		draw=red,
+		draw=white,
 		sharp corners,
-		pattern=north east lines,
+		pattern=crosshatch dots light steel blue,
 		hatchspread=120pt,
 		hatchthickness=10pt,
 		hatchcolor=SkyBlue1!10,
