txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -351,7 +351,7 @@
 		\path[
 		draw=white,
 		sharp corners,
-		pattern=crosshatch dots light gray,
+		pattern=crosshatch dots gray,
 		hatchspread=0pt,
 		hatchthickness=0pt,
 		hatchcolor=SkyBlue1!10,
