--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -352,6 +352,7 @@
 		draw=white,
 		sharp corners,
 		pattern=checkerboard,
+		color=green,
 		hatchspread=0pt,
 		hatchthickness=0pt,
 		hatchcolor=SkyBlue1!10,
