txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -352,7 +352,7 @@
 		draw=white,
 		sharp corners,
 		pattern=checkerboard,
-		color=green,
+		pattern color=green,
 		hatchspread=0pt,
 		hatchthickness=0pt,
 		hatchcolor=SkyBlue1!10,
