txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -351,7 +351,7 @@
 		\path[
 		draw=white,
 		sharp corners,
-		pattern=checkerboard,
+		pattern=crosshatch dots,
 		pattern color=green,
 		hatchspread=0pt,
 		hatchthickness=0pt,
