--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -396,8 +396,13 @@ where $B^{1},B^{2},\ldots$ are independent \bwm{} on $\R$ called \ul{coordinate 
 	\end{equation*}
 \end{definition}
 \begin{exercise}
-	Prove that the second definition of \bwm{} implies the first for $d=1$
+	Prove that the second definition of \bwm{} implies the first for $d=1$.
 \end{exercise}
+But with these properties there is the risk that no such object exists! For example, if we add differentiability to our list of requests then no object satisfies such properties. So we need to ask two questions:
+\begin{itemize}
+	\item Does \bwm{} exists?
+	\item Is it unique?
+\end{itemize}
 \clearpage
 \listoffigures  
 \end{document} 
