txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -403,6 +403,10 @@ But with these properties there is the risk that no such object exists! For exam
 	\item Does \bwm{} exists?
 	\item Is it unique?
 \end{itemize}
+Wiener worked on the difference space, that is the space of the increments of the process, and introduced a Fourier series representation:
+\begin{equation*}
+	W_0=\xi_{0}t+\sqrt{2}\sum_{n=1}^{\infty}\xi_{n}\frac{\sin(n\pi t)}{\pi n}\qquad0\leq t\leq 1
+\end{equation*}
 \clearpage
 \listoffigures  
 \end{document} 
