txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -407,6 +407,7 @@ Wiener worked on the difference space, that is the space of the increments of th
 \begin{equation*}
 	W_0=\xi_{0}t+\sqrt{2}\sum_{n=1}^{\infty}\xi_{n}\frac{\sin(n\pi t)}{\pi n}\qquad0\leq t\leq 1
 \end{equation*}
+where $\{\xi_{i}\}$ are i.i.d. \rv s $\xi_{i}\distnorm{0,1}$
 \clearpage
 \listoffigures  
 \end{document} 
