--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -405,9 +405,9 @@ But with these properties there is the risk that no such object exists! For exam
 \end{itemize}
 Wiener worked on the difference space, that is the space of the increments of the process, and introduced a Fourier series representation:
 \begin{equation*}
-	W_0=\xi_{0}t+\sqrt{2}\sum_{n=1}^{\infty}\xi_{n}\frac{\sin(n\pi t)}{\pi n}\qquad0\leq t\leq 1
+	W_t=\xi_{0}t+\sqrt{2}\sum_{n=1}^{\infty}\xi_{n}\frac{\sin(n\pi t)}{\pi n}\qquad0\leq t\leq 1
 \end{equation*}
-where $\{\xi_{i}\}$ are i.i.d. \rv s $\xi_{i}\distnorm{0,1}$
+where $\{\xi_{i}\}$ are i.i.d. \rv s $\xi_{i}\distnorm{0,1}$, so this object is a Fourier series for which the coefficients are \rv s. Thinking about difference equations makes our life a bit easier, since different times have different $\xi_{i}$ but these are independent so also the increment between times are independent.
 \clearpage
 \listoffigures  
 \end{document} 
