txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -189,7 +189,7 @@ Let's have a fucking party!
 		\end{equation*}
 	\end{remark}
 \end{enumerate}
-\section{Brownian motion}
+\section{Definitions of Brownian motion}
 \subsection{Historical context}
 Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-23}$ (the Avogadro number) molecules with a diameter of $10^{-10}$ m of diameter.
 \begin{figure}[h]
@@ -408,7 +408,7 @@ Wiener worked on the difference space, that is the space of the increments of th
 	W_t=\xi_{0}t+\sqrt{2}\sum_{n=1}^{\infty}\xi_{n}\frac{\sin(n\pi t)}{\pi n}\qquad0\leq t\leq 1
 \end{equation*}
 where $\{\xi_{i}\}$ are i.i.d. \rv s $\xi_{i}\distnorm{0,1}$, so this object is a Fourier series for which the coefficients are \rv s. Thinking about difference equations makes our life a bit easier, since different times have different $\xi_{i}$ but these are independent so also the increment between times are independent.
-\subsection{Gaussian processes}
+\section{Gaussian processes}
 \clearpage
 \listoffigures  
 \end{document} 
