txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -409,6 +409,15 @@ Wiener worked on the difference space, that is the space of the increments of th
 \end{equation*}
 where $\{\xi_{i}\}$ are i.i.d. \rv s $\xi_{i}\distnorm{0,1}$, so this object is a Fourier series for which the coefficients are \rv s. Thinking about difference equations makes our life a bit easier, since different times have different $\xi_{i}$ but these are independent so also the increment between times are independent.
 \section{Gaussian processes}
+\begin{definition}
+	A \emph{Gaussian process} is defined as a process $\Gamma$ with
+	\begin{equation*}
+		\begin{array}{cccr}
+			\frac{\dif}{\dif \lambda}\ev\left[e^{i\lambda\Gamma}\right]\Big|_{\lambda=0}&=&im&m=\ev[\Gamma]\\
+			\frac{\dif^{2}}{\dif\lambda^{2}}\ev\left[e^{i\lambda\Gamma}\right]\Big|_{\lambda 0}&=&-\ev\left[\Gamma^{2}\right]&
+		\end{array}
+	\end{equation*}
+\end{definition}
 \clearpage
 \listoffigures  
 \end{document} 
