txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -412,7 +412,7 @@ where $\{\xi_{i}\}$ are i.i.d. \rv s $\xi_{i}\distnorm{0,1}$, so this object is 
 \begin{definition}
 	A \emph{Gaussian process} is defined as a process $\Gamma$ with
 	\begin{equation*}
-		\begin{array}{cccr}
+		\begin{array}{rclr}
 			\frac{\dif}{\dif \lambda}\ev\left[e^{i\lambda\Gamma}\right]\Big|_{\lambda=0}&=&im&m=\ev[\Gamma]\\
 			\frac{\dif^{2}}{\dif\lambda^{2}}\ev\left[e^{i\lambda\Gamma}\right]\Big|_{\lambda 0}&=&-\ev\left[\Gamma^{2}\right]&
 		\end{array}
