txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -432,6 +432,12 @@ where $\{\xi_{i}\}$ are i.i.d. \rv s $\xi_{i}\distnorm{0,1}$, so this object is 
 		\ev\left[e^{i\langle\lambda,\Gamma\rangle}\right]=e^{i\ev\left[\langle\lambda,\Gamma\rangle\right]-\unmezz\var\left(\langle\lambda,\Gamma\rangle\right)}.
 	\end{equation*}
 \end{definition}
+So setting 
+\begin{equation*}
+	\begin{array}{cc}
+		m=(m_{1},\ldots,m_{n})\in\R^{n}&m_{j}=\ev[\Gamma_{j}]
+	\end{array}
+\end{equation*}
 \clearpage
 \listoffigures  
 \end{document} 
