txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -444,6 +444,10 @@ So setting
 		\end{array}
 	\end{array}
 \end{equation*}
+So that 
+\begin{equation*}
+	\ev\left[e^{i\langle\lambda,\Gamma\rangle}\right]=e^{i\langle\lambda,m\rangle-\unmezz	\langle\lambda,\Sigma\lambda\rangle}
+\end{equation*}
 \clearpage
 \listoffigures  
 \end{document} 
