txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -446,8 +446,9 @@ So setting
 \end{equation*}
 So that 
 \begin{equation*}
-	\ev\left[e^{i\langle\lambda,\Gamma\rangle}\right]=e^{i\langle\lambda,m\rangle-\unmezz	\langle\lambda,\Sigma\lambda\rangle}
+	\ev\left[e^{i\langle\lambda,\Gamma\rangle}\right]=e^{i\langle\lambda,m\rangle-\unmezz	\langle\lambda,\Sigma\lambda\rangle}.
 \end{equation*}
+The basic idea is that I can linearly transform a random vector and it still is a Gaussian \rv. Fourier transform always exists even for limits, while it is not so easy for distributions.
 \clearpage
 \listoffigures  
 \end{document} 
