txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -455,7 +455,8 @@ The basic idea is that I can linearly transform a random vector and it still is 
 	\begin{axis}[every axis plot post/.append style={
 			mark=none,domain=-2:3,samples=50,smooth}, % All plots: from -2:2, 50 samples, smooth, no marks
 		axis x line*=bottom, % no box around the plot, only x and y axis
-		axis y line*=left, % the * suppresses the arrow tips
+		axis y line*=left,
+		axis lines=center, % the * suppresses the arrow tips
 		enlargelimits=upper] % extend the axes a bit to the right and top
 		\addplot {gauss(0,0.5)};
 		\addplot {gauss(1,0.75)};
