txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -460,6 +460,7 @@ The basic idea is that I can linearly transform a random vector and it still is 
 		enlargelimits=upper] % extend the axes a bit to the right and top
 		\addplot {gauss(0,0.5)};
 		\addplot {gauss(0,0.75)};
+		\addplot {gauss(0,0.90)};
 	\end{axis}
 	\end{tikzpicture}
 	\label{fig:gaugau}
