txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -458,7 +458,7 @@ The basic idea is that I can linearly transform a random vector and it still is 
 		axis y line*=left,
 		axis lines=center, % the * suppresses the arrow tips
 		enlargelimits=upper] % extend the axes a bit to the right and top
-		\addplot {gauss(0,0.5)} node[draw,pos=0.75,anchor=south west]{$\sigma_{2}$};
+		\addplot {gauss(0,0.5)} node[pos=0.75,anchor=south west]{$\sigma_{2}$};
 		\addplot {gauss(0,0.75)};
 		\addplot {gauss(0,0.2)};
 	\end{axis}
