txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -464,7 +464,7 @@ The basic idea is that I can linearly transform a random vector and it still is 
 	\end{axis}
 	\end{tikzpicture}
 	\label{fig:gaugau}
-	\caption{Degenerate.}
+	\caption{It will become a dirac measure... but that is not a fucking density.}
 \end{figure}
 \clearpage
 \listoffigures  
