--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -460,7 +460,7 @@ The basic idea is that I can linearly transform a random vector and it still is 
 		enlargelimits=upper] % extend the axes a bit to the right and top
 		\addplot {gauss(0,0.5)} node[pos=0.75,anchor=south west]{$\sigma_{2}$};
 		\addplot {gauss(0,0.75)} node[pos=0.9,anchor=south west]{$\sigma_{1}$};
-		\addplot[green] {gauss(0,0.2)} node[pos=0.6,anchor=south west]{$\sigma_{3}$};
+		\addplot[OliveDrab4] {gauss(0,0.2)} node[pos=0.6,anchor=south west]{$\sigma_{3}$};
 	\end{axis}
 	\end{tikzpicture}
 	\label{fig:gaugau}
