txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -449,6 +449,9 @@ So that
 	\ev\left[e^{i\langle\lambda,\Gamma\rangle}\right]=e^{i\langle\lambda,m\rangle-\unmezz	\langle\lambda,\Sigma\lambda\rangle}.
 \end{equation*}
 The basic idea is that I can linearly transform a random vector and it still is a Gaussian \rv. Fourier transform always exists even for limits, while it is not so easy for distributions. What happens if we apply to a Gaussian vector a matrix that turns it into a subspace? Do I care? Not much! But imagine the classic Gaussian \rv:
+\begin{equation*}
+	f(x)=\frac{1}{\sqrt{2\pi \sigma^{2}}}\exp\left\{-\frac{x^{2}}{2\sigma^{2}}\right\}
+\end{equation*}
 \begin{figure}[h]
 	\centering
 	\begin{tikzpicture}
