txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -470,7 +470,7 @@ If I take $\sigma\to0$ then the density degenerates into a Dirac measure.
 	\label{fig:gaugau}
 	\caption{It will become a dirac measure... but that is not a fucking density.}
 \end{figure}
-This is still technically a measure because it integrates to 1, but it is not a density anymore since we lose dimensionality on $\R!
+This is still technically a measure because it integrates to 1, but it is not a density anymore since we lose dimensionality on $\R$
 \clearpage
 \listoffigures  
 \end{document} 
