--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -470,7 +470,10 @@ If I take $\sigma\to0$ then the density degenerates into a Dirac measure.
 	\label{fig:gaugau}
 	\caption{It will become a dirac measure... but that is not a fucking density.}
 \end{figure}
-This is still technically a measure because it integrates to 1, but it is not a density anymore since we lose dimensionality on $\R$
+This is still technically a measure because it integrates to 1, but it is not a density anymore since we lose dimensionality on $\R$! But now consider the characteristic function
+\begin{equation*}
+	\ev\left[e^{i\lambda x}\right]=e^{-1\lambda\frac{\sigma^{2}}{2}}\xrightarrow{\sigma\to\0}=\ubracketthin{\claptext{characteristic function of degenerate \rv s.}}
+\end{equation*}
 \clearpage
 \listoffigures  
 \end{document} 
